# tokamunch-mdsplus-datasource

./: README.md  pyproject.toml
.github/workflows/: test.yml  upload-pypi.yml
src/tokamunch_mdsplus_datasource/: __init__.py  datasource.py  plugin.py
tests/: test_plugin.py
